# taskbar-weather

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
sh/: release.sh
src/: main.rs
src/platform/: mod.rs  nogui.rs  win.rs
src/query/: weather.rs
ui/: overlay.slint
