[package]
name = "taskbar-weather"
version = "0.1.0"
edition = "2024"
authors = ["Markku Sukanen <markku.sukanen@github.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/msukanen/taskbar-weather.git"
description = "A taskbar overlay weather doodah."

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"]}
reqwest = { version = "0.11", features = ["json"]}
serde_json = "1.0.141"
tokio = { version = "1", features = ["full"]}
slint = "1.12.1"
directories = "6.0.0"
toml = "0.9.2"
clap = { version = "4.5.41", features = ["derive"]}

[build-dependencies]
slint-build = "1.12.1"

[badges]
maintenance = { status = "experimental" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]}
raw-window-handle = "0.6.2"
